# Hermes

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  __init__.py  database.py  gui_ideias.py  llm_interface.py  main.py  pyproject.toml  requirements.txt  testar_banco.py  testar_llm.py
.github/workflows/: ci.yml
clients/caduceu/: README.md  client.py  config.yaml
core/: __init__.py  llm_controller.py  logic.py  registro_ideias.py
docs/: modos_de_voz.md  tutorial_iniciante.md  tutorial_uso.md
hermes/: __init__.py  __main__.py  api.py  config.py  logging.py
hermes/core/: registro_ideias.py
hermes/data/: database.py  migrate.py
hermes/services/: __init__.py  db.py  llm_interface.py  semantic_search.py
hermes/ui/: cli.py  gui.py
packaging/linux/: hermes.service  install.sh
packaging/windows/: build.bat  hermes.spec
prompts/: assistant_system.md  resumo_classificar.md
src/hermes/: __init__.py  __main__.py  api.py  config.py  logging.py
src/hermes/assistant/: __init__.py  engine.py  state.py  voice.py
src/hermes/core/: __init__.py  app.py  prompts.py  registro_ideias.py
src/hermes/data/: database.py  migrate.py
src/hermes/services/: __init__.py  db.py  llm_interface.py  reminders.py  semantic_search.py  stt.py
src/hermes/ui/: __init__.py  cli.py  gui.py
tests/: __init__.py  apscheduler_stub.py  conftest.py  requests_stub.py  test_api.py  test_assistant_engine.py  test_assistant_state.py  test_banco_script.py  test_banco_workflow.py  test_cli.py  test_core_app.py  test_database.py  test_db_dao.py  test_llm_interface.py  test_llm_script.py  test_menu_principal_integration.py  test_migrate.py  test_migration_v2.py  test_prompts.py  test_registro_ideias.py  test_registro_ideias_db_flow.py  test_reminders_scheduler.py  test_semantic_search.py  test_services_db_workflow.py  urllib3_stub.py
