[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hermes"
version = "0.1.0"
description = "Hermes - Registro de ideias com LLM"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.10"
dependencies = [
    "PyQt5>=5.15.9",
    "requests",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["hermes*"]

[tool.black]
line-length = 88

[tool.isort]
profile = "black"
line_length = 88

[tool.ruff]
line-length = 88
target-version = "py310"

[project.urls]
"Changelog" = "CHANGELOG.md"
"Contributing" = "CONTRIBUTING.md"
"License" = "LICENSE"
