[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hermes"
version = "0.1.0"
description = "Hermes - Registro de ideias com LLM"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.10"
dependencies = [
    "PyQt5>=5.15.9",
    "requests",
    "apscheduler",
]

[project.optional-dependencies]
voice = ["vosk==0.3.45", "sounddevice", "pyttsx3"]
api = ["fastapi", "uvicorn", "pydantic>=1,<3"]
semantic = ["scikit-learn>=1.1"]

[project.scripts]
"hermes-db-migrate" = "hermes.data.migrate:main"

[tool.setuptools.packages.find]
# Use a ``src`` layout so the package resides under ``src/``.
where = ["src"]
include = ["hermes*"]

[tool.black]
line-length = 88

[tool.isort]
profile = "black"
line_length = 88

[tool.ruff]
line-length = 88
target-version = "py310"

[project.urls]
"Changelog" = "CHANGELOG.md"
"Contributing" = "CONTRIBUTING.md"
"License" = "LICENSE"
